# quake3-rust-edition

./: .gitattributes  .gitignore  Cargo.toml  README.md  _gothic_floor.shader  play.bat
assets/branding/: README.md
assets/models/: ammo_crate.glb  armor_shard.glb  bfg_ammo.glb  bfg_pickup.glb  big_armor.glb  building.glb  cell_ammo.glb  combat_armor.glb  drone.glb  gauntlet_pickup.glb  grass.glb  grenade_ammo.glb  grenadelauncher_pickup.glb  health_pack.glb  hellhound.glb  lg_ammo.glb  lightninggun_pickup.glb  machinegun_pickup.glb  medkit.glb  plasma_pickup.glb  quad_pickup.glb  railgun_ammo.glb  railgun_pickup.glb  regen_pickup.glb  rock_scatter.glb  rocket_ammo.glb  rocketlauncher_pickup.glb  shotgun_ammo.glb  shotgun_pickup.glb  statue.glb  statue_femme.glb  tropical_pack.glb
assets/textures/env/: skybox_clouds_bk.tga  skybox_clouds_dn.tga  skybox_clouds_ft.tga  skybox_clouds_lf.tga  skybox_clouds_rt.tga  skybox_clouds_up.tga
assets/textures/liquids/: lavahell.tga
crates/q3-bot/: Cargo.toml
crates/q3-bot/src/: lib.rs
crates/q3-bsp/: Cargo.toml
crates/q3-bsp/src/: lib.rs  lumps.rs  patch.rs  raw.rs
crates/q3-collision/: Cargo.toml
crates/q3-collision/src/: content.rs  lib.rs  patch_collide.rs  trace.rs
crates/q3-common/: Cargo.toml
crates/q3-common/src/: cmd.rs  console.rs  cvar.rs  error.rs  lib.rs  log.rs
crates/q3-engine/: Cargo.toml  build.rs
crates/q3-engine/src/: app.rs  hud_helpers.rs  logo.rs  main.rs  map_dl.rs  menu.rs  vr.rs
crates/q3-engine/src/net/: client.rs  demo.rs  mod.rs  server.rs
crates/q3-filesystem/: Cargo.toml
crates/q3-filesystem/src/: lib.rs
crates/q3-game/: Cargo.toml
crates/q3-game/src/: entity.rs  health.rs  lib.rs  movement.rs  world.rs
crates/q3-image/: Cargo.toml
crates/q3-image/src/: lib.rs
crates/q3-math/: Cargo.toml
crates/q3-math/src/: lib.rs
crates/q3-model/: Cargo.toml
crates/q3-model/src/: glb.rs  lib.rs  raw.rs
crates/q3-net/: Cargo.toml
crates/q3-net/src/: handshake.rs  lib.rs  messages.rs  netchan.rs  oob.rs
crates/q3-renderer/: Cargo.toml
crates/q3-renderer/src/: beam.rs  bsp_mesh.rs  camera.rs  cubemap.rs  decal.rs  dlight.rs  drone.rs  flare.rs  fog.rs  lib.rs  lightmap.rs  material.rs  md3.rs  particle.rs  post.rs  sky.rs  terrain.rs  text.rs
crates/q3-renderer/src/shaders/: beam.wgsl  decal.wgsl  drone.wgsl  flare.wgsl  material.wgsl  model.wgsl  particle.wgsl  sky.wgsl  sky_cubemap.wgsl  terrain.wgsl  text.wgsl  world.wgsl
crates/q3-shader/: Cargo.toml
crates/q3-shader/src/: lib.rs  tokenizer.rs  value.rs
crates/q3-sound/: Cargo.toml
crates/q3-sound/src/: lib.rs
crates/q3-terrain/: Cargo.toml
crates/q3-terrain/src/: br.rs  collision.rs  lib.rs  mesh.rs  metadata.rs  poi.rs
tools/: check_lfs.sh  dem_to_terrain.py
xtask/: Cargo.toml
xtask/src/: main.rs
