[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
# resvg = render SVG → bitmap. Pure Rust, pas de dépendance système.
resvg = "0.45"
usvg = "0.45"
tiny-skia = "0.11"
# ico = encode multi-resolution Windows .ico. Pure Rust aussi.
ico = "0.4"
anyhow = "1"
