[package]
name = "q3-bsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Parseur Quake 3 BSP v46 (IBSP)"

[dependencies]
q3-math = { workspace = true }
q3-common = { workspace = true }
bytemuck = { workspace = true }
byteorder = { workspace = true }
tracing = { workspace = true }
