[package]
name = "q3-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Chargeur de modèles MD3 (joueurs, armes, items)"

[dependencies]
q3-math = { workspace = true }
q3-common = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }
