[package]
name = "q3-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Netcode Quake 3 (UDP, channels fiables, snapshot/delta)"

[dependencies]
q3-common = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
