[package]
name = "q3-sound"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Système audio Quake 3 (rodio) — 3D spatialisé, musique, VO"

[dependencies]
q3-math = { workspace = true }
q3-common = { workspace = true }
rodio = { workspace = true }
parking_lot = { workspace = true }
hashbrown = { workspace = true }
tracing = { workspace = true }
